add avatar and badge component

--- a/pages/getting-started/usage.html
+++ b/pages/getting-started/usage.html
@@ -8,12 +8,7 @@
     <link rel="stylesheet" href="/pages/style.css" />
   </head>
   <body>
-    <header>
-      <img
-        src="/assets/starling.png"
-        alt="Purple Backed Starling by Mel Tillery"
-      />
-    </header>
+    <header></header>
     <nav></nav>
     <main></main>
     <script src="/pages/nav.js"></script>
