add landing page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Starling UI - Rohit Gaur</title>
+    <link rel="stylesheet" href="/pages/style.css" />
+    <link rel="stylesheet" href="/utils/color.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="sui_brand">
+      <img id="sui_logo" src="/assets/starling.svg" alt="startling ui logo" />
+      <span id="sui_brand_text">Starling UI</span>
+    </div>
+    <div class="sui_cta">
+      <button id="getStarted" class="sui_btn">Get Started</button>
+      <button id="docs" class="sui_btn btn_outline">Documentation</button>
+    </div>
+    <script src="app.js"></script>
+  </body>
 </html>
