add colors, remove unused files, update README

--- a/pages/getting-started/usage.html
+++ b/pages/getting-started/usage.html
@@ -4,13 +4,59 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Starling UI - Rohit Gaur</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/favicon/favicon-16x16.png"
+    />
+    <title>Starling UI - Usage - Rohit Gaur</title>
     <link rel="stylesheet" href="/pages/style.css" />
   </head>
   <body>
     <header></header>
     <nav></nav>
-    <main></main>
+    <main>
+      <h1>Usage</h1>
+      <p class="sui_usage_p">
+        Starling UI is an HTML-based UI toolkit for the web; sensible UI design,
+        and a friendly development experience.
+      </p>
+      <p class="sui_usage_p">
+        No need to start from scratch, StarlingUI is an open-source component
+        library that gives designers and developers the components they need to
+        create engaging product experiences.
+      </p>
+      <p id="rem_notice" class="sui_doc_p">
+        Note: I have set the root font-size to 10px for this library.
+      </p>
+      <p class="sui_doc_p">
+        Instructions to import Starling UI in your CSS or HTML:
+      </p>
+
+      <div class="code_wrapper">
+        <script type="text/plain" class="line-numbers language-css">
+          // CSS
+          @import url("https://starlingui.netlify.app/sui.css");
+        </script>
+        <script type="text/plain" class="line-numbers language-html">
+          // HTML
+          <link rel="stylesheet" href="https://starlingui.netlify.app/sui.css">
+        </script>
+      </div>
+    </main>
+    <script src="/utils/prism.js"></script>
     <script src="/pages/nav.js"></script>
   </body>
 </html>
