add dark mode, bug fixes

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Starling UI - Rohit Gaur</title>
     <link rel="stylesheet" href="/pages/style.css" />
-    <link rel="stylesheet" href="/utils/color.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header></header>
+    <nav></nav>
     <div class="sui_brand">
       <img id="sui_logo" src="/assets/starling.svg" alt="startling ui logo" />
       <span id="sui_brand_text">Starling UI</span>
@@ -19,5 +20,6 @@
       <button id="docs" class="sui_btn btn_outline">Documentation</button>
     </div>
     <script src="app.js"></script>
+    <script src="/pages/nav.js"></script>
   </body>
 </html>
