--- a/pages/getting-started/typography.html
+++ b/pages/getting-started/typography.html
@@ -147,26 +147,26 @@
         These are the different Background Colors in Starling UI:
       </p>
       <div class="font_weight flex_cl">
-        <span class="h3 fw5 sui_color_bg_p"
-          >This is Primary Background Color</span
-        >
-        <span class="h3 fw5 sui_color_bg_v1"
-          >This is Variant 1 Background Color</span
-        >
-        <span class="h3 fw5 sui_color_bg_v2"
-          >This is Variant 2 Background Color</span
-        >
-        <span class="h3 fw5 sui_color_bg_v3"
-          >This is Variant 3 Background Color</span
-        >
+        <div class="h3 fw5 sui_color_bg_p">
+          This is Primary Background Color
+        </div>
+        <div class="h3 fw5 sui_color_bg_v1">
+          This is Variant 1 Background Color
+        </div>
+        <div class="h3 fw5 sui_color_bg_v2">
+          This is Variant 2 Background Color
+        </div>
+        <div class="h3 fw5 sui_color_bg_v3">
+          This is Variant 3 Background Color
+        </div>
       </div>
 
       <div class="code_wrapper">
         <script type="text/plain" class="line-numbers language-html">
-          <span class="h3 fw5 sui_color_bg_p">This is Primary Background Color</span>
-          <span class="h3 fw5 sui_color_bg_v1">This is Variant 1 Background Color</span>
-          <span class="h3 fw5 sui_color_bg_v2">This is Variant 2 Background Color</span>
-          <span class="h3 fw5 sui_color_bg_v3">This is Variant 3 Background Color</span>
+          <div class="h3 fw5 sui_color_bg_p">This is Primary Background Color</div>
+          <div class="h3 fw5 sui_color_bg_v1">This is Variant 1 Background Color</div>
+          <div class="h3 fw5 sui_color_bg_v2">This is Variant 2 Background Color</div>
+          <div class="h3 fw5 sui_color_bg_v3">This is Variant 3 Background Color</div>
         </script>
       </div>
       <!-- TYPOGRAPHY END -->
