refactor: update variable and class names

--- a/pages/getting-started/typography.html
+++ b/pages/getting-started/typography.html
@@ -54,27 +54,27 @@
         font-size:
       </p>
       <div class="typography_reset">
-        <div class="typography_wrapper flex_rw flex_ac flex_wp">
+        <div class="typography_wrapper flex_row flex_align_center flex_wrap">
           <h1>This is a Heading - H1</h1>
           <span>Font Size: &nbsp;<b>4.8rem</b></span>
         </div>
-        <div class="typography_wrapper flex_rw flex_ac flex_wp">
+        <div class="typography_wrapper flex_row flex_align_center flex_wrap">
           <h2>This is a Heading - H2</h2>
           <span>Font Size: &nbsp;<b>3.2rem</b></span>
         </div>
-        <div class="typography_wrapper flex_rw flex_ac flex_wp">
+        <div class="typography_wrapper flex_row flex_align_center flex_wrap">
           <h3>This is a Heading - H3</h3>
           <span>Font Size: &nbsp;<b>2.4rem</b></span>
         </div>
-        <div class="typography_wrapper flex_rw flex_ac flex_wp">
+        <div class="typography_wrapper flex_row flex_align_center flex_wrap">
           <h4>This is a Heading - H4</h4>
           <span>Font Size: &nbsp;<b>2.0rem</b></span>
         </div>
-        <div class="typography_wrapper flex_rw flex_ac flex_wp">
+        <div class="typography_wrapper flex_row flex_align_center flex_wrap">
           <h5>This is a Heading - H5</h5>
           <span>Font Size: &nbsp;<b>1.6rem</b></span>
         </div>
-        <div class="typography_wrapper flex_rw flex_ac flex_wp">
+        <div class="typography_wrapper flex_row flex_align_center flex_wrap">
           <p>This is a Paragraph - P</p>
           <span>Font Size: &nbsp;<b>1.2rem</b></span>
         </div>
@@ -96,77 +96,79 @@
         These are the different Font Weights in Starling UI. The demo text has
         the .h3 custom font class:
       </p>
-      <div class="font_weight flex_cl">
-        <span class="h3 fw3">LIGHT 300</span>
-        <span class="h3 fw4">REGULAR 400</span>
-        <span class="h3 fw5">MEDIUM 500</span>
-        <span class="h3 fw6">SEMIBOLD 600</span>
-        <span class="h3 fw7">BOLD 700</span>
-        <span class="h3 fw8">BOLDER 800</span>
-        <span class="h3 fw9">BLACK 900</span>
+      <div class="font_weight flex_column">
+        <span class="h3 font_weight_300">LIGHT 300</span>
+        <span class="h3 font_weight_400">REGULAR 400</span>
+        <span class="h3 font_weight_500">MEDIUM 500</span>
+        <span class="h3 font_weight_600">SEMIBOLD 600</span>
+        <span class="h3 font_weight_700">BOLD 700</span>
+        <span class="h3 font_weight_800">BOLDER 800</span>
+        <span class="h3 font_weight_900">BLACK 900</span>
       </div>
 
       <div class="code_wrapper">
         <script type="text/plain" class="line-numbers language-html">
-          <span class="h3 fw3">LIGHT 300</span>
-          <span class="h3 fw4">REGULAR 400</span>
-          <span class="h3 fw5">MEDIUM 500</span>
-          <span class="h3 fw6">SEMIBOLD 600</span>
-          <span class="h3 fw7">BOLD 700</span>
-          <span class="h3 fw8">BOLDER 800</span>
-          <span class="h3 fw9">BLACK 900</span>
+          <span class="h3 font_weight_300">LIGHT 300</span>
+          <span class="h3 font_weight_400">REGULAR 400</span>
+          <span class="h3 font_weight_500">MEDIUM 500</span>
+          <span class="h3 font_weight_600">SEMIBOLD 600</span>
+          <span class="h3 font_weight_700">BOLD 700</span>
+          <span class="h3 font_weight_800">BOLDER 800</span>
+          <span class="h3 font_weight_900">BLACK 900</span>
         </script>
       </div>
 
       <p class="sui_doc_p">
         These are the different Text Colors in Starling UI:
       </p>
-      <div class="font_weight flex_cl">
-        <span class="h3 fw5 sui_color_text_p">This is Primary Text Color</span>
-        <span class="h3 fw5 sui_color_text_v1"
+      <div class="font_weight flex_column">
+        <span class="h3 font_weight_500 sui_color_text_p"
+          >This is Primary Text Color</span
+        >
+        <span class="h3 font_weight_500 sui_color_text_v1"
           >This is Variant 1 Text Color</span
         >
-        <span class="h3 fw5 sui_color_text_v2"
+        <span class="h3 font_weight_500 sui_color_text_v2"
           >This is Variant 2 Text Color</span
         >
-        <span class="h3 fw5 sui_color_text_v3"
+        <span class="h3 font_weight_500 sui_color_text_v3"
           >This is Variant 3 Text Color</span
         >
       </div>
 
       <div class="code_wrapper">
         <script type="text/plain" class="line-numbers language-html">
-          <span class="h3 fw5 sui_color_text_p">This is Primary Text Color</span>
-          <span class="h3 fw5 sui_color_text_v1">This is Variant 1 Text Color</span>
-          <span class="h3 fw5 sui_color_text_v2">This is Variant 2 Text Color</span>
-          <span class="h3 fw5 sui_color_text_v3">This is Variant 3 Text Color</span>
+          <span class="h3 font_weight_500 sui_color_text_p">This is Primary Text Color</span>
+          <span class="h3 font_weight_500 sui_color_text_v1">This is Variant 1 Text Color</span>
+          <span class="h3 font_weight_500 sui_color_text_v2">This is Variant 2 Text Color</span>
+          <span class="h3 font_weight_500 sui_color_text_v3">This is Variant 3 Text Color</span>
         </script>
       </div>
 
       <p class="sui_doc_p">
         These are the different Background Colors in Starling UI:
       </p>
-      <div class="font_weight flex_cl">
-        <div class="h3 fw5 sui_color_bg_p">
+      <div class="font_weight flex_column">
+        <div class="h3 font_weight_500 sui_color_bg_p">
           This is Primary Background Color
         </div>
-        <div class="h3 fw5 sui_color_bg_v1">
+        <div class="h3 font_weight_500 sui_color_bg_v1">
           This is Variant 1 Background Color
         </div>
-        <div class="h3 fw5 sui_color_bg_v2">
+        <div class="h3 font_weight_500 sui_color_bg_v2">
           This is Variant 2 Background Color
         </div>
-        <div class="h3 fw5 sui_color_bg_v3">
+        <div class="h3 font_weight_500 sui_color_bg_v3">
           This is Variant 3 Background Color
         </div>
       </div>
 
       <div class="code_wrapper">
         <script type="text/plain" class="line-numbers language-html">
-          <div class="h3 fw5 sui_color_bg_p">This is Primary Background Color</div>
-          <div class="h3 fw5 sui_color_bg_v1">This is Variant 1 Background Color</div>
-          <div class="h3 fw5 sui_color_bg_v2">This is Variant 2 Background Color</div>
-          <div class="h3 fw5 sui_color_bg_v3">This is Variant 3 Background Color</div>
+          <div class="h3 font_weight_500 sui_color_bg_p">This is Primary Background Color</div>
+          <div class="h3 font_weight_500 sui_color_bg_v1">This is Variant 1 Background Color</div>
+          <div class="h3 font_weight_500 sui_color_bg_v2">This is Variant 2 Background Color</div>
+          <div class="h3 font_weight_500 sui_color_bg_v3">This is Variant 3 Background Color</div>
         </script>
       </div>
       <!-- TYPOGRAPHY END -->
