--- a/pages/getting-started/colors.html
+++ b/pages/getting-started/colors.html
@@ -60,70 +60,110 @@
       <br />
       <!-- used for representation purpose only -->
       <div class="color_wrapper sui_grid grid_h5">
-        <div class="color_align_padding color_primary_p2 flex_cl flex_ac">
+        <div
+          class="color_align_padding color_primary_p2 flex_column flex_align_center"
+        >
           Darker <span>#2e13af</span>
         </div>
-        <div class="color_align_padding color_primary_p1 flex_cl flex_ac">
+        <div
+          class="color_align_padding color_primary_p1 flex_column flex_align_center"
+        >
           Dark <span>#482dc9</span>
         </div>
-        <div class="color_align_padding color_primary_main flex_cl flex_ac">
+        <div
+          class="color_align_padding color_primary_main flex_column flex_align_center"
+        >
           Primary <span>#6146e2</span>
         </div>
-        <div class="color_align_padding color_primary_m1 flex_cl flex_ac">
+        <div
+          class="color_align_padding color_primary_m1 flex_column flex_align_center"
+        >
           Light <span>#7b60fc</span>
         </div>
-        <div class="color_align_padding color_primary_m2 flex_cl flex_ac">
+        <div
+          class="color_align_padding color_primary_m2 flex_column flex_align_center"
+        >
           Lighter <span>#9479ff</span>
         </div>
       </div>
       <div class="color_wrapper sui_grid grid_h5">
-        <div class="color_align_padding color_v1_p2 flex_cl flex_ac">
+        <div
+          class="color_align_padding color_v1_p2 flex_column flex_align_center"
+        >
           Darker <span>#f45b19</span>
         </div>
-        <div class="color_align_padding color_v1_p1 flex_cl flex_ac">
+        <div
+          class="color_align_padding color_v1_p1 flex_column flex_align_center"
+        >
           Dark <span>#f4afa1</span>
         </div>
-        <div class="color_align_padding color_v1_main flex_cl flex_ac">
+        <div
+          class="color_align_padding color_v1_main flex_column flex_align_center"
+        >
           Variant-1 <span>#f7c0b5</span>
         </div>
-        <div class="color_align_padding color_v1_m1 flex_cl flex_ac">
+        <div
+          class="color_align_padding color_v1_m1 flex_column flex_align_center"
+        >
           Light <span>#ffdacf</span>
         </div>
-        <div class="color_align_padding color_v1_m2 flex_cl flex_ac">
+        <div
+          class="color_align_padding color_v1_m2 flex_column flex_align_center"
+        >
           Lighter <span>#fff3e8</span>
         </div>
       </div>
       <div class="color_wrapper sui_grid grid_h5">
-        <div class="color_align_padding color_v2_p2 flex_cl flex_ac">
+        <div
+          class="color_align_padding color_v2_p2 flex_column flex_align_center"
+        >
           Darker <span>#1a8d1a</span>
         </div>
-        <div class="color_align_padding color_v2_p1 flex_cl flex_ac">
+        <div
+          class="color_align_padding color_v2_p1 flex_column flex_align_center"
+        >
           Dark <span>#a6dcd5</span>
         </div>
-        <div class="color_align_padding color_v2_main flex_cl flex_ac">
+        <div
+          class="color_align_padding color_v2_main flex_column flex_align_center"
+        >
           Variant-2 <span>#b5e2dc</span>
         </div>
-        <div class="color_align_padding color_v2_m1 flex_cl flex_ac">
+        <div
+          class="color_align_padding color_v2_m1 flex_column flex_align_center"
+        >
           Light <span>#cffcf6</span>
         </div>
-        <div class="color_align_padding color_v2_m2 flex_cl flex_ac">
+        <div
+          class="color_align_padding color_v2_m2 flex_column flex_align_center"
+        >
           Lighter <span>#e8ffff</span>
         </div>
       </div>
       <div class="color_wrapper sui_grid grid_h5">
-        <div class="color_align_padding color_v3_p2 flex_cl flex_ac">
+        <div
+          class="color_align_padding color_v3_p2 flex_column flex_align_center"
+        >
           Darker <span>#ed9f3a</span>
         </div>
-        <div class="color_align_padding color_v3_p1 flex_cl flex_ac">
+        <div
+          class="color_align_padding color_v3_p1 flex_column flex_align_center"
+        >
           Dark <span>#f2d380</span>
         </div>
-        <div class="color_align_padding color_v3_main flex_cl flex_ac">
+        <div
+          class="color_align_padding color_v3_main flex_column flex_align_center"
+        >
           Variant-3 <span>#f4da92</span>
         </div>
-        <div class="color_align_padding color_v3_m1 flex_cl flex_ac">
+        <div
+          class="color_align_padding color_v3_m1 flex_column flex_align_center"
+        >
           Light <span>#fff4ac</span>
         </div>
-        <div class="color_align_padding color_v3_m2 flex_cl flex_ac">
+        <div
+          class="color_align_padding color_v3_m2 flex_column flex_align_center"
+        >
           Lighter <span>#ffffdf</span>
         </div>
       </div>
